apps/base/pihole/middleware.yaml
#
# Reference:
# https://community.traefik.io/t/external-pihole-behind-traefik-redirect-admin/17383/9
#

apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: pihole-redirect-regex
  namespace: kube-system
  labels:
    app.kubernetes.io/component: middleware
    app.kubernetes.io/name: pihole-redirect-regex
spec:
  redirectRegex:
    regex: /admin/$
    replacement: /
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: pihole-add-prefix
  namespace: kube-system
  labels:
    app.kubernetes.io/component: middleware
    app.kubernetes.io/name: pihole-add-prefix
spec:
  addPrefix:
    prefix: /admin/
