apps/base/pihole/deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pihole
  namespace: kube-system
spec:
  selector:
    app: pihole
  ports:
    - port: 80
      targetPort: 80
      name: pihole-admin
    - port: 53
      targetPort: 53
      protocol: TCP
      name: dns-tcp
    - port: 53
      targetPort: 53
      protocol: UDP
      name: dns-udp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  namespace: kube-system
  labels:
    app: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      hostNetwork: true
      dnsPolicy: 'None'
      dnsConfig:
        nameservers:
          - 1.1.1.1
      containers:
        - name: pihole
          image: pihole/pihole:latest
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: true
          ports:
            - containerPort: 53
              protocol: TCP
            - containerPort: 53
              protocol: UDP
            - containerPort: 67
              protocol: UDP
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: pihole-etc-volume
              mountPath: /etc/pihole
            - name: pihole-dnsmasq-volume
              mountPath: /etc/dnsmasq.d
          resources:
            requests:
              memory: 128Mi
              cpu: 100m
            limits:
              memory: 2Gi
              cpu: 1000m
      volumes:
        - name: pihole-etc-volume
          persistentVolumeClaim:
            claimName: pihole-etc-pvc
        - name: pihole-dnsmasq-volume
          persistentVolumeClaim:
            claimName: pihole-dnsmasq-pvc
