apps/base/pihole/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pihole-dashboard-https
  namespace: kube-system
  labels:
    app.kubernetes.io/component: ingress
    app.kubernetes.io/name: pihole-dashboard-https
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pihole.powell.place`) && PathPrefix(`/admin`)
      kind: Rule
      middlewares:
        - name: traefik-forward-auth
          namespace: kube-system
        - name: security
          namespace: kube-system
        - name: pihole-redirect
          namespace: kube-system
      services:
        - name: pihole-web
          port: http
